security_groups.tf
resource "aws_security_group" "app_server_access" {
  name        = "[app]server-access"
  description = "Allow EC2 HTTP access"
  vpc_id      = aws_vpc.app_vpc.id

  dynamic "ingress" {
    for_each = toset([for subnet in aws_subnet.app_public_subnets : subnet.cidr_block])
    content {
      description = "Allow HTTP from Public Subnets"
      from_port   = 80
      to_port     = 80
      protocol    = "tcp"
      cidr_blocks = [ingress.value]
    }
  }

  egress {
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  egress {
    from_port        = 443
    to_port          = 443
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name = "[app]server-access"
  }
}

resource "aws_security_group" "alb_access" {
  name        = "[app]alb-access"
  description = "Allow ALB HTTP/HTTPS access"
  vpc_id      = aws_vpc.app_vpc.id

  ingress {
    description      = "Allow HTTP from Internet"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  ingress {
    description      = "Allow HTTPS from Internet"
    from_port        = 443
    to_port          = 443
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  egress {
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  egress {
    from_port        = 443
    to_port          = 443
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name = "[app]alb-access"
  }
}
